# lineartrails

./: .gitignore  CMakeLists.txt  Makefile  README.md
char/: ascon_3_rounds.xml  ascon_4_rounds_fast.xml  ascon_6_rounds_coll.xml  ascon_6_rounds_fast.xml  ascon_6_rounds_ksd.xml  example.xml  fast_4_rounds.xml  hamsi_1_round.xml  hamsicompression_2_round.xml  keccak_2_rounds.xml  keccak_3_rounds.xml  keccak_3_rounds_col.xml  keccak_4_rounds.xml  keccak_4_rounds_col.xml
examples/: ascon_3_rounds_typeI.xml  ascon_3_rounds_typeII.xml  icepole_3_rounds_typeIII.xml  keccak_2_rounds_typeI.xml  prost256_4_rounds_typeI.xml  prost256_5_rounds_typeI.xml
tool/: ascon.cpp  ascon.h  ascon_permutation.cpp  ascon_permutation.h  ascon_permutation.hpp  cache.h  cmdline.c  cmdline.ggo  cmdline.h  commandlineparser.cpp  commandlineparser.h  configparser.cpp  configparser.h  guessmask.cpp  guessmask.h  hamsi.cpp  hamsi.h  hamsi_permutation.cpp  hamsi_permutation.h  hamsi_permutation.hpp  keccak1600.cpp  keccak1600.h  layer.cpp  layer.h  lrucache.h  lrucache.hpp  main.cpp  mask.cpp  mask.h  permutation.cpp  permutation.h  permutation.hpp  permutation_list.cpp  permutation_list.h  pride.cpp  pride.h  pride_permutation.cpp  pride_permutation.h  pride_permutation.hpp  search.cpp  (+11 more)
